styles/style.css
html, body {
  background-color: #2A3EB2;
  font-family: 'Noto Sans', arial, sans-serif;
  height: 100vh;
  margin: 0 2rem;
}

.logo {
  display: block;
  max-width: 100%;
  height: 5rem; 
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
  margin-right: auto;
  margin-left: auto;
}

.container {
  background-color: white;
  margin: auto;
  margin-bottom: 70px;
  border-radius: 4px;
  max-width: 750px;
  padding: 20px;
}

/* Header  */
.header {
  text-align: center;
  margin-bottom: 2rem;
  
}

h1 {
  font-size: 1.75rem; 
  margin-top: 1rem;
}

#description {
  margin-top: 1rem;
}

input,
button,
select,
textarea {
  margin-top: .5rem; 
}

 /* Main Field, Dropdown, Radios, 
 Checkbox, Comment box, Submit */
.form-group {
  margin: 0 auto 1rem auto;
  padding: 0.25rem;
}

/* Main Field, Dropdown, Comment box */
.form-control {
  display: block;
  padding: .375rem 0rem .375rem .75rem;
  width: 100%;
  border: 1px solid #ced4da;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: .25rem;
  font-weight: 400;
}

/* Comment box */
::placeholder {
  font-family: 'Noto Sans', arial, sans-serif;
  font-size: 1rem;
}

/* Submit */
.submit-button {
  display: block;
  font-weight: 400;
  color: white;
  width: 100%;
  background-color: #2A3EB2;
  text-align: center;
  border: none;
  padding: .375rem .75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: .25rem;
}

/* Footer */
.copyright {
  color: white;
  text-align: center;
  margin-bottom: 1rem;
}

